ETL - rutas corregidas para entrega

--- a/ETL/EDA-tercera-y-última.ipynb
+++ b/ETL/EDA-tercera-y-última.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "b1ed29ba",
    "metadata": {},
    "outputs": [],
@@ -16,6 +16,8 @@
     "# ------------------------------------------------------------------------------\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
     "\n",
     "# Evaluar linealidad de las relaciones entre las variables\n",
     "# ------------------------------------------------------------------------------\n",
@@ -37,18 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "id": "40c9a0ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_raw = pd.read_csv('files/raw_data.csv')\n",
-    "df_limpio = pd.read_csv('files/raw_data_limpio.csv')"
+    "df_raw = pd.read_csv('../files/raw_data.csv')\n",
+    "df_limpio = pd.read_csv('../files/raw_data_limpio.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "id": "af5a3859",
    "metadata": {},
    "outputs": [
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "id": "a0ba31c0",
    "metadata": {},
    "outputs": [
@@ -105,16 +107,16 @@
       "||\n",
       "||**Top 5:**\n",
       "||nan  81.41%\n",
+      "|| resEaRcH scIENTiSt  -  Research & Development   0.12%\n",
+      "|| rESEArcH SCiEntIst  -  Research & Development   0.12%\n",
+      "|| LABOrATOrY TEchnIcIAn  -  Research & Development   0.12%\n",
       "|| Sales exECutIVE  -  Sales   0.12%\n",
-      "|| humAN resoURCEs  -  Human Resources   0.12%\n",
-      "|| labORAtoRy tEcHNICIAN  -  Research & Development   0.12%\n",
-      "|| hEalthCaRe reprEseNTaTiVe  -  Research & Development   0.12%\n",
       "||**Bottom 5:**\n",
       "||<br>\n",
-      "|| RESEArCH sCIenTIst  -  Research & Development   0.06%\n",
-      "|| hUMAn reSoUrCES  -  Human Resources   0.06%\n",
-      "|| HUmAN rESOuRceS  -  Human Resources   0.06%\n",
-      "|| SALEs REpRESentatIve  -  Sales   0.06%\n",
+      "|| ManUFACtURiNg DiRECTOr  -  Research & Development   0.06%\n",
+      "|| ResEARcH DiReCToR  -  Research & Development   0.06%\n",
+      "|| MANAgER  -  Research & Development   0.06%\n",
+      "|| labORATORY TechnIcIaN  -  Research & Development   0.06%\n",
       "|| heaLtHcArE repResENtATiVe  -  Research & Development   0.06%\n",
       "||<br>\n",
       "||**Media:** nan\n",
@@ -139,23 +141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f4e5b1f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('COLUMNA COMPARADA 1:\\n')\n",
-    "transform_info(df_raw,'remotework')\n",
-    "print('----<----<<---<----@')\n",
-    "print('@---->-->-----<-----')\n",
-    "print('COLUMNA COMPARADA 2:\\n')\n",
-    "transform_info(df_limpio, 'remotework')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a684c210",
    "metadata": {},
    "outputs": [
     {
@@ -164,20 +151,18 @@
      "text": [
       "COLUMNA COMPARADA 1:\n",
       "\n",
-      "Valores únicos: 5\n",
+      "Valores únicos: 2\n",
       "Número de registros: 1678\n",
-      "Valores nulos: 0\n",
-      "Registros duplicados: 1673\n",
-      "dtype: object\n",
+      "Valores nulos: 985\n",
+      "Registros duplicados: 1676\n",
+      "dtype: float64\n",
       "----------------\n",
       "\n",
       "Porcentajes:\n",
       "remotework\n",
-      "1        22.35\n",
-      "True     21.57\n",
-      "False    18.95\n",
-      "0        18.95\n",
-      "Yes      18.18\n",
+      "NaN    58.70\n",
+      "1.0    22.35\n",
+      "0.0    18.95\n",
       "Name: proportion, dtype: float64\n",
       "\n",
       "Estadísticas descriptivas\n",
@@ -191,16 +176,79 @@
       "\n",
       "Valores únicos: 2\n",
       "Número de registros: 1614\n",
-      "Valores nulos: 945\n",
+      "Valores nulos: 0\n",
       "Registros duplicados: 1612\n",
       "dtype: object\n",
       "----------------\n",
       "\n",
       "Porcentajes:\n",
       "remotework\n",
-      "NaN    58.55\n",
-      "yes    22.30\n",
-      "no     19.14\n",
+      "yes    61.96\n",
+      "no     38.04\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "Estadísticas descriptivas\n",
+      "---------------------------------\n",
+      "Media: nan\n",
+      "Mediana: nan\n",
+      "Moda: nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('COLUMNA COMPARADA 1:\\n')\n",
+    "transform_info(df_raw,'remotework')\n",
+    "print('----<----<<---<----@')\n",
+    "print('@---->-->-----<-----')\n",
+    "print('COLUMNA COMPARADA 2:\\n')\n",
+    "transform_info(df_limpio, 'remotework')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a684c210",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COLUMNA COMPARADA 1:\n",
+      "\n",
+      "Valores únicos: 2\n",
+      "Número de registros: 1678\n",
+      "Valores nulos: 985\n",
+      "Registros duplicados: 1676\n",
+      "dtype: float64\n",
+      "----------------\n",
+      "\n",
+      "Porcentajes:\n",
+      "remotework\n",
+      "NaN    58.70\n",
+      "1.0    22.35\n",
+      "0.0    18.95\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "Estadísticas descriptivas\n",
+      "---------------------------------\n",
+      "Media: 0.54\n",
+      "Mediana: 1.00\n",
+      "Moda: 1.0\n",
+      "----<----<<---<----@\n",
+      "@---->-->-----<-----\n",
+      "COLUMNA COMPARADA 2:\n",
+      "\n",
+      "Valores únicos: 0\n",
+      "Número de registros: 1614\n",
+      "Valores nulos: 1614\n",
+      "Registros duplicados: 1614\n",
+      "dtype: float64\n",
+      "----------------\n",
+      "\n",
+      "Porcentajes:\n",
+      "remotework\n",
+      "NaN    100.0\n",
       "Name: proportion, dtype: float64\n",
       "\n",
       "Estadísticas descriptivas\n",
@@ -224,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "5de45071",
    "metadata": {},
    "outputs": [
@@ -249,11 +297,11 @@
       "8339,32$      6.26\n",
       "12783,92$     2.50\n",
       "             ...  \n",
-      "1980,00$      0.06\n",
-      "2115,83$      0.06\n",
-      "1923,33$      0.06\n",
-      "2241,67$      0.06\n",
-      "15034,17$     0.06\n",
+      "1956,67$      0.06\n",
+      "10408,33$     0.06\n",
+      "6683,33$      0.06\n",
+      "7452,50$      0.06\n",
+      "3489,17$      0.06\n",
       "Name: proportion, Length: 494, dtype: float64\n",
       "\n",
       "Estadísticas descriptivas\n",
@@ -280,11 +328,11 @@
       "4492.842500      5.76\n",
       "2342.594167      4.71\n",
       "                ...  \n",
-      "1811.670000      0.06\n",
-      "2119.170000      0.06\n",
-      "5448.333333      0.06\n",
-      "1848.330000      0.06\n",
-      "16026.666667     0.06\n",
+      "1846.666667      0.06\n",
+      "3536.666667      0.06\n",
+      "1940.833333      0.06\n",
+      "3578.330000      0.06\n",
+      "13960.000000     0.06\n",
       "Name: proportion, Length: 715, dtype: float64\n",
       "\n",
       "Estadísticas descriptivas\n",
@@ -321,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
