--- a/ETL/transformación.ipynb
+++ b/ETL/transformación.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"files/raw_data.csv\", index_col=0) "
+    "df = pd.read_csv(\"../files/raw_data.csv\", index_col=0) "
    ]
   },
   {
@@ -1195,98 +1195,42 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1342</th>\n",
-       "      <td>research &amp; development</td>\n",
-       "      <td>laboratory technician</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>164</th>\n",
-       "      <td>research &amp; development</td>\n",
-       "      <td>research scientist</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1330</th>\n",
-       "      <td>research &amp; development</td>\n",
-       "      <td>research scientist</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1587</th>\n",
+       "      <th>1086</th>\n",
        "      <td>NaN</td>\n",
        "      <td>manager</td>\n",
        "      <td>NaN</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1627</th>\n",
+       "      <th>143</th>\n",
        "      <td>research &amp; development</td>\n",
-       "      <td>laboratory technician</td>\n",
+       "      <td>research director</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>760</th>\n",
-       "      <td>research &amp; development</td>\n",
-       "      <td>laboratory technician</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>sales</td>\n",
-       "      <td>sales executive</td>\n",
-       "      <td>sales executive  -  sales</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1060</th>\n",
+       "      <th>816</th>\n",
        "      <td>research &amp; development</td>\n",
-       "      <td>research scientist</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>554</th>\n",
-       "      <td>research &amp; development</td>\n",
-       "      <td>research scientist</td>\n",
+       "      <td>manufacturing director</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>141</th>\n",
-       "      <td>research &amp; development</td>\n",
-       "      <td>healthcare representative</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>272</th>\n",
+       "      <th>176</th>\n",
        "      <td>research &amp; development</td>\n",
        "      <td>laboratory technician</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>sales</td>\n",
-       "      <td>sales executive</td>\n",
-       "      <td>sales executive  -  sales</td>\n",
-       "      <td>3</td>\n",
+       "      <th>212</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>laboratory technician</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>520</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>manager</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>970</th>\n",
+       "      <th>688</th>\n",
        "      <td>research &amp; development</td>\n",
        "      <td>research scientist</td>\n",
        "      <td>NaN</td>\n",
@@ -1300,39 +1244,95 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1255</th>\n",
-       "      <td>research &amp; development</td>\n",
-       "      <td>laboratory technician</td>\n",
+       "      <th>303</th>\n",
+       "      <td>sales</td>\n",
+       "      <td>sales executive</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>404</th>\n",
+       "      <th>1046</th>\n",
        "      <td>research &amp; development</td>\n",
-       "      <td>research director</td>\n",
+       "      <td>manufacturing director</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>healthcare representative</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>494</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>manufacturing director</td>\n",
        "      <td>NaN</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>320</th>\n",
-       "      <td>sales</td>\n",
-       "      <td>sales executive</td>\n",
-       "      <td>sales executive  -  sales</td>\n",
-       "      <td>3</td>\n",
+       "      <th>657</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>research director</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1229</th>\n",
+       "      <th>746</th>\n",
        "      <td>research &amp; development</td>\n",
-       "      <td>laboratory technician</td>\n",
+       "      <td>research scientist</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>335</th>\n",
+       "      <th>528</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>manufacturing director</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
        "      <td>research &amp; development</td>\n",
        "      <td>research scientist</td>\n",
        "      <td>research scientist  -  research &amp; development</td>\n",
        "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1134</th>\n",
+       "      <td>sales</td>\n",
+       "      <td>sales executive</td>\n",
+       "      <td>sales executive  -  sales</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>453</th>\n",
+       "      <td>sales</td>\n",
+       "      <td>sales executive</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1611</th>\n",
+       "      <td>sales</td>\n",
+       "      <td>sales executive</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>healthcare representative</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>640</th>\n",
+       "      <td>research &amp; development</td>\n",
+       "      <td>healthcare representative</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1340,48 +1340,48 @@
       ],
       "text/plain": [
        "                  department                    jobrole  \\\n",
-       "1342  research & development      laboratory technician   \n",
-       "164   research & development         research scientist   \n",
-       "1330  research & development         research scientist   \n",
-       "1587                     NaN                    manager   \n",
-       "1627  research & development      laboratory technician   \n",
-       "760   research & development      laboratory technician   \n",
-       "66                     sales            sales executive   \n",
-       "1060  research & development         research scientist   \n",
-       "554   research & development         research scientist   \n",
-       "141   research & development  healthcare representative   \n",
-       "272   research & development      laboratory technician   \n",
-       "30                     sales            sales executive   \n",
-       "520                      NaN                    manager   \n",
-       "970   research & development         research scientist   \n",
+       "1086                     NaN                    manager   \n",
+       "143   research & development          research director   \n",
+       "816   research & development     manufacturing director   \n",
+       "176   research & development      laboratory technician   \n",
+       "212   research & development      laboratory technician   \n",
+       "688   research & development         research scientist   \n",
        "1219         human resources            human resources   \n",
-       "1255  research & development      laboratory technician   \n",
-       "404   research & development          research director   \n",
-       "320                    sales            sales executive   \n",
-       "1229  research & development      laboratory technician   \n",
-       "335   research & development         research scientist   \n",
+       "303                    sales            sales executive   \n",
+       "1046  research & development     manufacturing director   \n",
+       "63    research & development  healthcare representative   \n",
+       "494   research & development     manufacturing director   \n",
+       "657   research & development          research director   \n",
+       "746   research & development         research scientist   \n",
+       "528   research & development     manufacturing director   \n",
+       "185   research & development         research scientist   \n",
+       "1134                   sales            sales executive   \n",
+       "453                    sales            sales executive   \n",
+       "1611                   sales            sales executive   \n",
+       "72    research & development  healthcare representative   \n",
+       "640   research & development  healthcare representative   \n",
        "\n",
        "                                      roledepartament  joblevel  \n",
-       "1342                                              NaN         1  \n",
-       "164                                               NaN         1  \n",
-       "1330                                              NaN         1  \n",
-       "1587                                              NaN         5  \n",
-       "1627                                              NaN         1  \n",
-       "760                                               NaN         1  \n",
-       "66                         sales executive  -  sales          4  \n",
-       "1060                                              NaN         1  \n",
-       "554                                               NaN         2  \n",
-       "141                                               NaN         2  \n",
-       "272                                               NaN         2  \n",
-       "30                         sales executive  -  sales          3  \n",
-       "520                                               NaN         5  \n",
-       "970                                               NaN         1  \n",
+       "1086                                              NaN         5  \n",
+       "143                                               NaN         4  \n",
+       "816                                               NaN         2  \n",
+       "176                                               NaN         2  \n",
+       "212                                               NaN         1  \n",
+       "688                                               NaN         1  \n",
        "1219             human resources  -  human resources          1  \n",
-       "1255                                              NaN         1  \n",
-       "404                                               NaN         4  \n",
-       "320                        sales executive  -  sales          3  \n",
-       "1229                                              NaN         1  \n",
-       "335    research scientist  -  research & development          1  "
+       "303                                               NaN         2  \n",
+       "1046                                              NaN         3  \n",
+       "63                                                NaN         2  \n",
+       "494                                               NaN         4  \n",
+       "657                                               NaN         5  \n",
+       "746                                               NaN         1  \n",
+       "528                                               NaN         2  \n",
+       "185    research scientist  -  research & development          1  \n",
+       "1134                       sales executive  -  sales          2  \n",
+       "453                                               NaN         3  \n",
+       "1611                                              NaN         3  \n",
+       "72                                                NaN         4  \n",
+       "640                                               NaN         2  "
       ]
      },
      "execution_count": 21,
@@ -2290,7 +2290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"files/raw_data_limpio.csv\", index=False)"
+    "df.to_csv(\"../files/raw_data_limpio.csv\", index=False)"
    ]
   },
   {
@@ -2319,7 +2319,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2333,7 +2333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
